--- a/Assignment/ClientApp/package.json
+++ b/Assignment/ClientApp/package.json
@@ -5,14 +5,18 @@
     "description": "This is an assignment application.",
     "dependencies": {
         "@azure/communication-calling": "1.0.0-beta.1",
-        "@azure/communication-common": "1.0.0-beta.1",
         "@azure/communication-chat": "1.0.0-beta.1",
+        "@azure/communication-common": "1.0.0-beta.1",
         "@azure/communication-signaling": "1.0.0-beta.1",
         "@fluentui/react": "^7.117.1",
         "@fluentui/react-icons-northstar": "^0.51.0",
         "@fluentui/react-northstar": "^0.51.0",
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.3.2",
+        "@testing-library/user-event": "^7.1.2",
         "@types/preval.macro": "^3.0.0",
         "@types/react": "^16.9.49",
+        "@types/react-aria-live": "^2.0.0",
         "@types/react-dom": "^16.9.8",
         "@types/react-redux": "^7.1.9",
         "@types/uuid": "^8.3.0",
@@ -22,7 +26,9 @@
         "node-forge": "0.10.0",
         "oidc-client": "^1.9.0",
         "preval.macro": "^5.0.0",
-        "react": "^16.8.0",
+        "react": "^16.14.0",
+        "react-aria-live": "^2.0.5",
+        "react-copy-to-clipboard": "^5.0.3",
         "react-dom": "^16.8.0",
         "react-redux": "^7.2.0",
         "react-router-bootstrap": "^0.25.0",
@@ -33,12 +39,7 @@
         "redux-thunk": "^2.3.0",
         "rimraf": "^2.6.2",
         "source-map-explorer": "^2.5.0",
-        "uuid": "^8.1.0",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
-        "@testing-library/user-event": "^7.1.2",
-        "@types/react-aria-live": "^2.0.0",
-        "react-aria-live": "^2.0.5"
+        "uuid": "^8.1.0"
     },
     "devDependencies": {
         "ajv": "^6.9.1",
